--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/m-cr/user-group-settings#readme",
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
     "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "nodemon": "^1.10.2",
     "pg": "^6.1.0",
     "sequelize": "^3.24.3"
   }
