--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "PORT=3000 DATABASE_URL=postgres://localhost/user_group_settings SYNC=true nodemon server"
   },
   "repository": {
     "type": "git",
