--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "PORT=3000 DATABASE_URL=postgres://localhost/user_group_settings SYNC=false nodemon server"
+    "start": "node server",
+    "start:dev": "PORT=3000 SECRET=mikenpat DATABASE_URL=postgres://localhost/user_group_settings SYNC=false nodemon server"
   },
   "repository": {
     "type": "git",
